// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > region should handle default state 1`] = `
Object {
  "aggregationAreas": Array [],
  "bookmarks": Array [],
  "bundles": Array [],
  "regions": Array [],
}
`;

exports[`reducers > region should handle delete region 1`] = `
Object {
  "bundles": Array [],
  "regions": Array [],
}
`;

exports[`reducers > region should handle delete regional analysis 1`] = `
Object {
  "regionalAnalyses": Array [
    Object {
      "_id": "efgh",
      "accessGroup": "accessGroupName",
      "bounds": Object {},
      "bundleId": "5678",
      "complete": true,
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "cutoffMinutes": 60,
      "deleted": false,
      "grid": "Jobs_total",
      "height": 300,
      "name": "ANALYSIS 2",
      "nonce": "12345",
      "north": 20024,
      "projectId": "4321",
      "request": Object {
        "accessModes": "WALK",
        "bikeSafe": 1,
        "bikeSlope": 1,
        "bikeSpeed": 4.166666666666667,
        "bikeTime": 1,
        "bounds": Object {
          "east": -76,
          "north": 39,
          "south": 38,
          "west": -77,
        },
        "bundleId": "1",
        "date": "2016-01-16",
        "defaultExpanded": true,
        "directModes": "WALK",
        "egressModes": "WALK",
        "fromLat": 12,
        "fromLon": 34,
        "fromTime": 25200,
        "maxBikeTime": 20,
        "maxRides": 4,
        "maxTripDurationMinutes": 60,
        "maxWalkTime": 20,
        "monteCarloDraws": 200,
        "name": "Profile Request Test",
        "projectId": "1",
        "reachabilityThreshold": 0,
        "regionId": "1",
        "toTime": 32400,
        "transitModes": "BUS,TRAM,RAIL,SUBWAY",
        "travelTimePercentile": 50,
        "variantIndex": 0,
        "walkSpeed": 1.3888888888888888,
        "workerVersion": "v4.0.0",
      },
      "status": "DONE",
      "travelTimePercentile": 42,
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
      "variant": 1,
      "west": 20015,
      "width": 300,
      "workerVersion": "v3.2.0",
      "zoom": 9,
    },
  ],
}
`;

exports[`reducers > region should handle set all regions 1`] = `
Object {
  "aggregationAreas": Array [],
  "bookmarks": Array [],
  "bundles": Array [],
  "regions": Array [
    Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "description": "Region description",
      "name": "Mock Region",
      "nonce": "12345",
      "opportunityDatasets": Array [
        Object {
          "_id": "Workers_total",
          "name": "Workers total",
          "sourceName": "lodes-data-2014",
        },
      ],
      "statusCode": "DONE",
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
    },
  ],
}
`;

exports[`reducers > region should handle set region 1`] = `
Object {
  "aggregationAreas": Array [],
  "bookmarks": Array [],
  "bundles": Array [],
  "regions": Array [
    Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "bounds": Object {
        "east": -76,
        "north": 39,
        "south": 38,
        "west": -77,
      },
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "description": "Region description",
      "name": "Mock Region",
      "nonce": "12345",
      "opportunityDatasets": Array [
        Object {
          "_id": "Workers_total",
          "name": "Workers total",
          "sourceName": "lodes-data-2014",
        },
      ],
      "statusCode": "DONE",
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
    },
  ],
}
`;
